@@ -3,9 +3,11 @@ package com.higgs.server.web.svc;
 import com.higgs.server.db.entity.Room;
 import com.higgs.server.db.repo.RoomRepository;
 import lombok.AllArgsConstructor;
+import lombok.NonNull;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -13,14 +15,14 @@ import java.util.List;
 public class RoomService {
     private final RoomRepository roomRepository;
 
-    public Room upsert(final Room room) {
+    public Room upsert(@NonNull final Room room) {
         return this.roomRepository.save(room);
     }
 
     public List<Room> performRoomSearch(final Room searchCriteria, final Collection<Long> homeSeqs) {
         if (searchCriteria != null) {
             if (searchCriteria.getRoomSeq() != null) {
-                return List.of(this.roomRepository.getByRoomSeqAndHomeHomeSeq(searchCriteria.getRoomSeq(), searchCriteria.getHomeSeq()));
+                return Collections.singletonList(this.roomRepository.getByRoomSeqAndHomeHomeSeq(searchCriteria.getRoomSeq(), searchCriteria.getHomeSeq()));
             }
             if (searchCriteria.getName() != null) {
                 return this.roomRepository.getByNameContainingIgnoreCaseAndHomeHomeSeq(searchCriteria.getName(), searchCriteria.getHomeSeq());
